--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap');
 
 body {
-    background-color: black;
+    background-color: #030303;
     color: white;
     font-family: 'IBM Plex Mono', monospace;
     font-size: 1em;
